--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="navbar">
         <nav>
-            <p>Scroll down please</p>
+            <p>Kalkulator Segitiga</p>
             <ul>
                 <li><a id="sec-1" href="#luas1">Hitung Luas Segitiga</a></li>
                 <li><a id="sec-2" href="#keliling1">Hitung Keliling Segitiga</a></li>
@@ -21,14 +21,14 @@
         <div id="keliling1">
             <h1>Hitung Keliling Segitiga</h1>
             <img src="https://asset-a.grid.id/crop/0x0:0x0/x/photo/2020/04/27/2008777398.jpg" alt="Italian Trulli">
-            <label for="sisiA">Nilai Sisi A:</label>
-            <input type="number" id="sisiA" placeholder="Masukkan panjang sisi A">
+            <label for="sisiA">Nilai Sisi AB:</label>
+            <input type="number" id="sisiA" placeholder="Masukkan panjang sisi AB">
 
-            <label for="sisiB">Nilai Sisi B:</label>
-            <input type="number" id="sisiB" placeholder="Masukkan panjang sisi B">
+            <label for="sisiB">Nilai Sisi BC:</label>
+            <input type="number" id="sisiB" placeholder="Masukkan panjang sisi BC">
 
-            <label for="sisiC">Nilai Sisi C:</label>
-            <input type="number" id="sisiC" placeholder="Masukkan panjang sisi C">
+            <label for="sisiC">Nilai Sisi CA:</label>
+            <input type="number" id="sisiC" placeholder="Masukkan panjang sisi CA">
 
             <button onclick="hitungKeliling()">Hitung</button>
             <button onclick="resetNilai()">Reset</button>
@@ -38,7 +38,7 @@
 
         <div id="luas1">
             <h1>Hitung Luas Segitiga</h1>
-            <img src="https://asset-a.grid.id/crop/0x0:0x0/x/photo/2020/04/27/2008777398.jpg" alt="Italian Trulli">
+            <img src="https://3.bp.blogspot.com/-g6sCbjR0CcI/WfQqDdsUWhI/AAAAAAAAA6o/9I6SnDmBYjoAh-3_eSjZr_zwzajehZwqgCLcBGAs/w600/luas%2Bsegitiga%2Bdalam%2Btrigonometri.JPG" alt="Italian Trulli">
             <label for="alas">Nilai Alas:</label>
             <input type="number" id="alas" placeholder="Masukkan panjang alas">
 
